<resources>
    <string name="app_name">Bottombar</string>
    <string name="nav_home">Home</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_map">Map</string>
    <string name="nav_memories">Memories</string>
    <string name="nav_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
