<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/ic_baseline_camera_alt_black_24dp"
        android:title="@string/nav_camera" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_map_black_24dp"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_memories"
        android:icon="@drawable/ic_baseline_collections_black_24dp"
        android:title="@string/nav_memories" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_black_24dp"
        android:title="@string/nav_settings" />
</menu>